<resources>
    <string name="app_name">myVet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Usuario incorrecto</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="login_failed">"Fallo en inicio de sesión"</string>
    <string name="title_activity_menu_cliente">MenuClienteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nomvacio">Nombre</string>
    <string name="apevacio">Apellidos</string>
    <string name="numvacio">Nºde teléfono</string>
    <string name="domvacio">Domicilio</string>

    <string name="prefs_file">com.dam.myVet.PREFERENCE_FILE_KAY</string>
    <string name="dnivacio">DNI</string>

    <string name="parrafo1">Esta aplicación nace en 2021 como proyecto final de la asignatura Diseño de Aplicaciones Móviles de 4ºCurso del Grado en Ingeniería de Tecnologías de Telecomunicación en la Universidad de Sevilla. Desarrollada por los alumnos Pablo López Vílchez y Gonzalo Jesús Lorca Hinojosa.</string>
    <string name="parrafo2">Se trata de una aplicación sin ánimo de lucro creada por estudiantes para poner en práctica todos los conocimientos adquiridos en esta asignatura. </string>
    <string name="parrafo3">Esta aplicación es totalmente escalable y adaptable para cualquier clínica veterinaria que en un futuro requiriese de ella.</string>
    <string name="aceptar">Ok</string>

</resources>