<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutAs.aboutAsFragment">


    <LinearLayout
        android:id="@+id/fragaboutusLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">


        <ImageView
            android:id="@+id/logoapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logoini" />

        <TextView
            android:id="@+id/tituloappabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lemon_reg"
            android:gravity="center_horizontal"
            android:layout_marginLeft="105dp"
            android:text="MyVET v1.0"
            android:textColor="@color/teal_700"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/teal_700"
            android:hint="@string/parrafo1"
            android:textColorHint="@color/teal_700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/teal_700"
            android:hint="@string/parrafo2"
            android:textColorHint="@color/teal_700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/teal_700"
            android:hint="@string/parrafo3"
            android:textColorHint="@color/teal_700"/>

        <Button
            android:id="@+id/btprivdatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:text="Política de Privacidad"
            android:textSize="30px"
            android:textColor="@color/white"
            android:background="@drawable/formaboton" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>